'compatability' typo in web-server start-up warning

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Trivial - P5
    • 3.2.0-rc3
    • Affects Version/s: 3.2.0-rc2
    • Component/s: Logging
    • None
    • Fully Compatible
    • ALL
    • TIG C (11/20/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      db/startup_warnings_common.cpp:73:
      log() << "**          and should be disabled unless required for backward compatability."
      

      "compatability" should be "compatibility"

            Assignee:
            Robert Guo (Inactive)
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: