SERVER-21348 fix typo in startup warnings